Initial Clean Up Run
- change many passives to 0402
- change TL072's to the same SOIC package
- finish up routing for topside input buffer
- add diodes for +- 12 from eurorack input (untested)
- change some board limits to represent current manufacturing reality
- hunt down a lot of DRC errors (lots of warnings remaining!)
- made hole for expander bigger
- fixedsys fonts + text label moving about
- todo: reset labels for 0402 parts since my standard library has the labels taken off.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 **/.DS_Store
+hw/WIP_inputfix/plinkyblack-backups
+hw/WIP_inputfix/\#auto_saved_files\#
+hw/WIP_inputfix/fp-info-cache
+hw/WIP_inputfix/fp-info-cache
