fix case typo in include path

--- a/sw/.cproject
+++ b/sw/.cproject
@@ -85,7 +85,7 @@
                                     									
                                     <listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
                                     									
-                                    <listOptionValue builtIn="false" value="../Core/src/tinyusb/src"/>
+                                    <listOptionValue builtIn="false" value="../Core/Src/tinyusb/src"/>
                                     									
                                     <listOptionValue builtIn="false" value="../Core/Inc"/>
                                     									
@@ -245,7 +245,7 @@
                                     									
                                     <listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
                                     									
-                                    <listOptionValue builtIn="false" value="../Core/src/tinyusb/src"/>
+                                    <listOptionValue builtIn="false" value="../Core/Src/tinyusb/src"/>
                                     									
                                     <listOptionValue builtIn="false" value="../Core/Inc"/>
                                     									
