more build docs

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ hw/WIP_inputfix/plinkyblack-backups
 hw/WIP_inputfix/\#auto_saved_files\#
 hw/WIP_inputfix/fp-info-cache
 hw/WIP_inputfix/fp-info-cache
+
+bootloader/Release
+sw/Release
+bootloader/Debug
+sw/Debug
