create variation with USB-C and SMD audio jacks

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ hw/.DS_Store
 hw/plinkyblackfront/.DS_Store
 hw/plinkyblackfront/.DS_Store
 hw/.DS_Store
+
+hw/plinkyblackfront/plinkyblackfront-backups/plinkyblackfront-2023-10-04_182206.zip
+hw/plinkyblack_hwmidi/production/20231005_plinkyblack_hwmidi.zip
