production adjustments and convert testjig to kicad7

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ hw/.DS_Store
 
 hw/plinkyblackfront/plinkyblackfront-backups/plinkyblackfront-2023-10-04_182206.zip
 hw/plinkyblack_hwmidi/production/20231005_plinkyblack_hwmidi.zip
+hw/.DS_Store
