midi+jacks fixes
Moved 5V pogo pin pad
de-plated encoder jack lug for less assembly errors

--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@ hw/WIP_inputfix/plinkyblack-backups
 hw/WIP_inputfix/\#auto_saved_files\#
 hw/WIP_inputfix/fp-info-cache
 hw/WIP_inputfix/fp-info-cache
-
 bootloader/Release
 sw/Release
 bootloader/Debug
 sw/Debug
 __pycache__/
-hw/.DS_Store
-hw/.DS_Store
 hw/plinkyblackfront/.DS_Store
 hw/plinkyblackfront/.DS_Store
 hw/.DS_Store
-
 hw/plinkyblackfront/plinkyblackfront-backups/plinkyblackfront-2023-10-04_182206.zip
 hw/plinkyblack_hwmidi/production/20231005_plinkyblack_hwmidi.zip
-hw/.DS_Store
+binmaker-debug.py
+hw/plinkyblackfront/.DS_Store
+hw/testjig/testjig-Edge_Cuts.svg
+hw/testjig/testjig-F_Cu.svg
+sw/.DS_Store
