create opensource front/back panels

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,9 @@ sw/plinkyblack Debug.cfg
 sw/plinkyblack Debug.launch
 sw/plinkyblack Release (1).launch
 sw/plinkyblack Release.launch
+hw/.DS_Store
+hw/plinky_front_osh/plinky_back_osh-backups/plinky_back_osh-2024-02-23_153116.zip
+hw/plinky_front_osh/plinky_back_osh-backups/plinky_back_osh-2024-02-23_153918.zip
+hw/plinky_front_osh/plinky_back_osh-backups/plinky_back_osh-2024-02-23_161346.zip
+hw/plinky_front_osh/plinky_front_osh-backups/plinky_front_osh-2024-02-23_143448.zip
+hw/.DS_Store
