--- a/.gitignore
+++ b/.gitignore
@@ -1,97 +1,45 @@
 **/.DS_Store
+__pycache__/
+binmaker-debug.py
+.vscode/
+
+bootloader/Release
+bootloader/Debug
+sw/Release
+sw/Debug
+sw/.settings/language.settings.xml
+sw/.settings/org.eclipse.cdt.core.prefs
+sw/.settings/org.eclipse.cdt.core.prefs
+sw/.settings/com.st.stm32cube.ide.mcu.sfr.prefs
+sw/.settings/com.st.stm32cube.ide.mcu.sfrview.prefs
+sw/.DS_Store
+
+sw/plinkyblack Debug.cfg
+sw/plinkyblack Debug.launch
+sw/plinkyblack Release.cfg
+sw/plinkyblack Release (1).launch
+sw/plinkyblack Release.launch
+
+hw/.DS_Store
+hw/plinkyblackfront/.DS_Store
+
 hw/WIP_inputfix/plinkyblack-backups
 hw/WIP_inputfix/\#auto_saved_files\#
 hw/WIP_inputfix/fp-info-cache
 hw/WIP_inputfix/fp-info-cache
-bootloader/Release
-sw/Release
-bootloader/Debug
-sw/Debug
-__pycache__/
-hw/plinkyblackfront/.DS_Store
-hw/plinkyblackfront/.DS_Store
-hw/.DS_Store
-hw/plinkyblackfront/plinkyblackfront-backups/plinkyblackfront-2023-10-04_182206.zip
-hw/plinkyblack_hwmidi/production/20231005_plinkyblack_hwmidi.zip
-binmaker-debug.py
-hw/plinkyblackfront/.DS_Store
-hw/testjig/testjig-Edge_Cuts.svg
-hw/testjig/testjig-F_Cu.svg
-sw/.DS_Store
-hw/.DS_Store
-hw/.DS_Store
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-10-27_102829.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-10-27_103410.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-03_145624.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-05_151958.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-05_152614.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-05_153142.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-05_154815.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-05_163018.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-06_125109.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-21_125128.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-22_094741.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-22_095308.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-22_111537.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-22_112553.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-22_123531.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-23_155856.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2023-12-23_160441.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2024-01-06_160639.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2024-01-06_174158.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2024-01-06_175222.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2024-01-06_180649.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2024-01-06_191655.zip
-hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/plinkyblack_hwmidi_jacks-2024-01-06_203945.zip
-sw/.DS_Store
-sw/.settings/com.st.stm32cube.ide.mcu.sfr.prefs
-sw/.settings/com.st.stm32cube.ide.mcu.sfrview.prefs
-sw/.settings/language.settings.xml
-sw/.settings/org.eclipse.cdt.core.prefs
-sw/Core/Src/main.c
-sw/Core/Src/plinky.c
-sw/plinkyblack Debug.cfg
-sw/plinkyblack Debug.launch
-sw/plinkyblack Release (1).launch
-sw/plinkyblack Release.cfg
-sw/plinkyblack Release.launch
-hw/testjig/testjig-backups/testjig-2024-01-06_160318.zip
-hw/testjig/testjig-backups/testjig-2024-01-06_161953.zip
-hw/testjig/testjig-backups/testjig-2024-01-06_162501.zip
-hw/testjig/testjig-backups/testjig-2024-01-06_164153.zip
-hw/testjig/testjig-backups/testjig-2024-01-06_172039.zip
-hw/testjig/testjig-backups/testjig-2024-01-06_173151.zip
-hw/v2/plinkyblack-backups/plinkyblack-2024-01-06_153502.zip
-hw/v2/plinkyblack-backups/plinkyblack-2024-01-06_160323.zip
-hw/v2/plinkyblack-backups/plinkyblack-2024-01-06_174824.zip
-hw/v2/plinkyblack-backups/plinkyblack-2024-01-06_175336.zip
+
+hw/v2/plinkyblack-backups/
 hw/v2/plinkyblack.kicad_prl
 hw/v2/plinkyblack.kicad_pro
 hw/v2/plinkyblack.kicad_sch
-sw/.DS_Store
-sw/.settings/language.settings.xml
-sw/.settings/org.eclipse.cdt.core.prefs
-sw/Core/Src/main.c
-sw/Core/Src/plinky.c
-sw/plinkyblack Debug.cfg
-sw/plinkyblack Debug.launch
-sw/plinkyblack Release (1).launch
-sw/plinkyblack Release.launch
-hw/.DS_Store
 hw/v2/plinkyblack.kicad_prl
 hw/v2/plinkyblack.kicad_pro
-sw/.DS_Store
-sw/.settings/language.settings.xml
-sw/.settings/org.eclipse.cdt.core.prefs
-sw/Core/Src/main.c
-sw/Core/Src/plinky.c
-sw/plinkyblack Debug.cfg
-sw/plinkyblack Debug.launch
-sw/plinkyblack Release (1).launch
-sw/plinkyblack Release.launch
-hw/.DS_Store
-hw/plinky_front_osh/plinky_back_osh-backups/plinky_back_osh-2024-02-23_153116.zip
-hw/plinky_front_osh/plinky_back_osh-backups/plinky_back_osh-2024-02-23_153918.zip
-hw/plinky_front_osh/plinky_back_osh-backups/plinky_back_osh-2024-02-23_161346.zip
-hw/plinky_front_osh/plinky_front_osh-backups/plinky_front_osh-2024-02-23_143448.zip
-hw/.DS_Store
+
+hw/plinkyblack_hwmidi/production/20231005_plinkyblack_hwmidi.zip
+
+hw/plinkyblackfront/plinkyblackfront-backups/
+hw/plinkyblack_hwmidi_jacks/plinkyblack_hwmidi_jacks-backups/
+hw/plinky_front_osh/plinky_back_osh-backups/
+hw/plinky_front_osh/plinky_front_osh-backups/
+hw/testjig/testjig-backups/
+hw/testjig/*.svg
