--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "configurations": [
         {
-            "name": "Plinky Debug",
+            "name": "Plinky Debug the Debug Build",
             "type": "cortex-debug",
             "request": "launch",
             "servertype": "openocd",
@@ -25,6 +25,32 @@
             "openOCDLaunchCommands": [
                 "adapter speed 5000"
             ]
+        },
+        {
+            "name": "Plinky Debug the Release Build",
+            "type": "cortex-debug",
+            "request": "launch",
+            "servertype": "openocd",
+            "cwd": "${workspaceFolder}/sw/nocube_makefile",
+            "executable": "${workspaceFolder}/sw/nocube_makefile/RELEASE/plinkyblack.elf",
+            "device": "STM32L476VGT6",
+            "configFiles": [
+                "interface/stlink.cfg",
+                "target/stm32l4x.cfg"
+            ],
+            "svdFile": "${workspaceFolder}/sw/nocube_makefile/STM32L476.svd",
+            "preLaunchTask": "Build Plinky Release Build",
+            "runToMain": true,
+            "loadBinary": true,
+            "flashStartAddress": "0x08010000",
+            "postLaunchCommands": [
+                "monitor reset halt",
+                "load"
+            ],
+            "openOCDLaunchCommands": [
+                "adapter speed 5000"
+            ]
         }
+
     ]
 }
